cleaned up type, added updated color, spacing, fixed lists

--- a/less/selfedge/selfedge-elements.less
+++ b/less/selfedge/selfedge-elements.less
@@ -2,7 +2,7 @@
 	font-family: @font-family-heading;
 	letter-spacing: 1px;
 	/*try this*/
-	/*letter-spacing: 0.4pt;*/
+	/*letter-spacing: 0.4pt;*/ 
 	text-transform: uppercase;
 	padding: 7px 16px 5px;
 	font-size: 12px;
@@ -94,7 +94,7 @@ button.btn-heading {
 .btn-yellow {
 	background-color: @brand-yellow;
 	border-color: @brand-yellow;
-	color: @gray-dark;
+	color: @btn-text-color;
 	text-shadow: 0 1px rgba(0,0,0,0.05);
 
 	&:hover {
@@ -105,7 +105,7 @@ button.btn-heading {
 	&:focus {
 		background-color: @brand-yellow;
 		border-color: @brand-yellow;
-		color: @gray-dark;
+		color: @btn-text-color;
 	}
 }
 
@@ -172,7 +172,7 @@ button.btn-heading {
 }
 
 .btn-link {
-	color: @gray-dark;
+	color: @btn-text-color;
 	font-family: @font-family-serif;
 	text-decoration: none;
 	text-transform: uppercase;
@@ -200,7 +200,7 @@ button.btn-heading {
 
 	&:active,
 	&:focus {
-		color: @gray-dark;
+		color: @btn-text-color;
 		text-decoration: none;
 
 		span {
@@ -215,7 +215,7 @@ button.btn-heading {
 }
 
 .btn-header {
-	color: @gray-dark;
+	color: @btn-text-color;
 	font-family: @font-family-serif;
 	text-transform: uppercase;
 	text-decoration: none;
@@ -246,7 +246,7 @@ button.btn-heading {
 
 	&:active,
 	&:focus {
-		color: @gray-dark;
+		color: @btn-text-color;
 		text-decoration: none;
 		box-shadow: none;
 		-webkit-box-shadow: none;
@@ -673,11 +673,34 @@ button.btn-heading {
 
 .modal-dialog {
 	width: 100%;
+	padding: 30px 0;
 }
 
 .modal-contained {
 	.modal-dialog {
 		max-width: 1000px;
+	}
+}
+
+
+.modal-header {
+	padding: 0 15px;
+	
+	.close-btn {
+		position: absolute;
+		top: 5px; right: 0;
+	}
+	
+	.close-btn-bottom {
+		position: absolute;
+		right: 5px;
+		bottom: 13px;
+	}
+	
+	@media (min-width: 768px) { 
+		.close-btn {
+			top: 10px; right: 5px;
+		}
 	}
 }
 
@@ -716,12 +739,6 @@ button.btn-heading {
 
 .modal-footer {
 	border-top: none;
-}
-
-@media (max-width: @screen-sm) { /* for smaller than a tablet */
-	.modal-dialog {
-		padding: 0;
-	}
 }
 
 
@@ -873,7 +890,7 @@ button.btn-heading {
 }
 
 .dropdown-menu > li > a {
-	padding: 0px 12px;
+	padding: 0px 20px;
 	white-space: normal;
 }
 
@@ -938,6 +955,11 @@ ul.list-unstyled.dropdown-menu:last-child {
 	.dropdown-menu li {
 		font-size: 14px;
 	}
+	
+	.dropdown-menu > li > a {
+		padding: 0px 12px;
+		white-space: normal;
+	}
 }
 
 
@@ -977,7 +999,7 @@ ul.list-unstyled.dropdown-menu:last-child {
 }
 
 .size-table > tbody > tr > td.selected {
-	background-color: @gray-dark;
+	background-color: @btn-text-color;
 	color: @gray-lighter;
 }
 
@@ -1023,29 +1045,25 @@ ul.list-unstyled {
 	margin-bottom: 27px;
 	padding-top: 24px;
 
-	@media (min-width: @screen-sm) {
-		padding-top: 18px;
-		margin-bottom: 20px;
+	@media (min-width: @screen-sm-min) {
+		padding-top: 20px;
+		margin-bottom: 2px;
 	}
-
-	@media (min-width: @screen-md) {
-		padding-top: 23px;
-		margin-bottom: 30px;
+	
+	@media (min-width: @screen-md-min) {
+		padding-top: 28px;
+		margin-bottom: 28px;
 	}
 }
 
 ul.list-unstyled li {
-	margin-bottom: 4px;
-	font-size: 14px;
+	margin-bottom: 10px;
+	font-size: 12px;
 	text-transform: none;
 
-	@media (max-width: @screen-md) {
+	@media (min-width: @screen-sm-min) {
 		margin-bottom: 0px;
-	}
-
-	@media (max-width: @screen-sm) {
-		margin-bottom: 10px;
-		font-size: 12px;
+		font-size: 14px;
 	}
 }
 
@@ -1071,28 +1089,31 @@ ul.list-unstyled.list-uppercase li {
 }
 
 ul.list-unstyled li.list-header {
-	margin-bottom: 20px;
-	font-size: 16px;
-	line-height: 14px;
-	font-family: @font-family-heading;
+	font-size: 12px;
+	margin-top: 0px;
+	margin-bottom: 10px;
+	line-height: 20px;
+	letter-spacing: 1pt;
 	text-transform: uppercase;
-	color: #474747;
+	font-family: @font-family-heading;
+	color: @heading-text-color;
 }
 
-@media (max-width: @screen-md) {
+@media (min-width: @screen-sm-min) {
 	ul.list-unstyled li.list-header {
 		font-size: 14px;
-		margin-bottom: 15px;
-		line-height: 20px;
+		margin-bottom: 17px;
+		line-height: 20px;		
 	}
 }
-@media (max-width: @screen-sm) {
+
+@media (min-width: @screen-md-min) {
 	ul.list-unstyled li.list-header {
-		font-size: 12px;
-		margin-top: 0px;
-		margin-bottom: 10px;
-		line-height: 20px;
+		margin-bottom: 17px;
+		font-size: 16px;
+		line-height: 14px
 	}
+	
 }
 
 ul.list-unstyled li.list-selected {
@@ -1164,12 +1185,37 @@ ul.list-unstyled:last-child {
 
 
 .se-checkbox-list {
-	margin-left: 20px;
-
-	@media (max-width: screen-md) {
-		margin-left: 17px;
+	margin: 0px;
+	padding: 0 10px;
+	
+	@media (min-width: @screen-sm) {
+		padding: 0 16px;
+	}
+	
+	@media (min-width: @screen-md-min) {
+		padding: 0 20px;
 	}
 }
+
+@media (min-width: @screen-md-min) {
+	.se-checkbox-list ul.list-unstyled li {
+		margin-bottom: -3px;
+	}
+}
+
+@media (min-width: @screen-sm-min) {
+	.se-checkbox-list ul.list-unstyled li.list-header {
+		margin-bottom: 10px;
+	}
+}
+
+@media (min-width: @screen-md-min) {
+	.se-checkbox-list ul.list-unstyled li.list-header {
+		margin-bottom: 10px;
+	}
+}
+
+
 
 .se-checkbox {
 	cursor: pointer;
@@ -1189,16 +1235,20 @@ ul.list-unstyled:last-child {
 	float: left;
 }	
 
-.se-checkbox-list {
-		margin: 0px;
-		padding: 0 10px;
 
-	}
 
 	.se-checkbox > input[type=checkbox] + div {
 		width: 20px; height: 20px;
 		background-position: -2px -78px;
 		background-size: 200px 200px;
+	}
+	
+	@media (min-width: @screen-sm-min) {
+		.se-checkbox > input[type=checkbox] + div {
+			width: 13px; height: 13px;
+			background-position: -196px -24px;
+			background-size: 400px 400px;
+		}
 	}
 
 	@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
@@ -1211,6 +1261,14 @@ ul.list-unstyled:last-child {
 	.se-checkbox > input[type=checkbox]:checked + div {
 		background-position: -24px -78px;
 		background-size: 200px 200px;
+	}
+	
+	@media (min-width: @screen-sm-min) {
+		.se-checkbox > input[type=checkbox]:checked + div {
+			width: 13px; height: 13px;
+			background-position: -174px -24px;
+			background-size: 400px 400px;
+		}
 	}
 
 	@media only screen and (-webkit-min-device-pixel-ratio: 2), only screen and (min-device-pixel-ratio: 2) {
@@ -1229,16 +1287,20 @@ ul.list-unstyled:last-child {
 
 @media (min-width: @screen-sm) { /* for smaller than a tablet */
 	.se-checkbox-label {
-		font-size: 12px;
+		font-size: 13px;
+		margin-left: 16px;
+		margin-top: -1px;
 	}
 }
 
 
 @media (min-width: @screen-md) {
 	.se-checkbox-label {
+		margin-top: 0; 
 		position: relative;
 		color: #777777;
-		font-size: 13px;
+		font-size: 14px;
+		margin-left: 22px;
 	}
 	
 }
