--- a/less/selfedge/selfedge-variables.less
+++ b/less/selfedge/selfedge-variables.less
@@ -52,14 +52,24 @@
 @form-erro-bg-color:	  #ffeded;
 
 
+//non-retina -- para - #555 header - #474747 - item/lists - #666666 btn - #474747
+//retina -- para - #333 header - #474747 - item/lists - #666666
+
+
 // Scaffolding
 // -------------------------
 
-@body-bg:               #fff;
-@text-color:            @gray-dark;
-// @text-color-retina:     @gray-dark;
+@body-bg:               		#fff;
+@text-color:            		#555;
+@text-color-retina:    			#333;
 
-@base-letter-spacing:	1.1px;
+@heading-text-color:			#474747;
+@heading-text-color-retina:		#474747;
+@item-list-text-color:			#666666;
+@item-list-text-color-retina:	#666666;
+@btn-text-color:				#474747;
+
+@base-letter-spacing:	0.5pt;
 
 // Links
 // -------------------------
@@ -151,7 +161,7 @@
 
 @btn-font-weight:                normal;
 
-@btn-default-color:              #333;
+@btn-default-color:              #474747;
 @btn-default-bg:                 #fff;
 @btn-default-border:             @gray-lighter;
 
